changed secret name

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hashicorp Vault Secrets - Github Secrets Sync Demo</h1>
-    <p>My static secret value is: <span id="secret-placeholder"><strong>[SECRET_PLACEHOLDER]</strong></span></p>
+    <p>STRIPE_API_KEY: <span id="secret-placeholder"><strong>[STRIPE_API_KEY]</strong></span></p>
 </body>
 </html>
